--- a/HomeManager/View/Personen/ucEmailAdressen.xaml
+++ b/HomeManager/View/Personen/ucEmailAdressen.xaml
@@ -39,9 +39,7 @@
                         Data="{StaticResource myPathSetting}"
                         Fill="White"
                         Stretch="Fill" />
-                    <TextBlock
-                        Style="{StaticResource TitleBarText}"
-                        Text="Emailadressen" />
+                    <TextBlock Style="{StaticResource TitleBarText}" Text="Emailadressen" />
                 </StackPanel>
                 <uc:ucWerkBalk
                     Grid.Column="1"
@@ -73,14 +71,12 @@
                 </Grid.RowDefinitions>
 
                 <TextBlock
-                    x:Name="tbNaam"
                     Grid.Row="0"
                     Grid.Column="3"
                     Text="{Binding MijnSelectedPersoonItem, Mode=OneWay}" />
 
 
                 <TextBlock
-                    x:Name="EmailAdres"
                     Grid.Row="2"
                     Grid.Column="2"
                     Margin="5"
@@ -94,7 +90,6 @@
                     Text="{Binding MijnSelectedItem.Emailadres, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
 
                 <TextBlock
-                    x:Name="EmailType"
                     Grid.Row="3"
                     Grid.Column="2"
                     Margin="5"
@@ -108,7 +103,7 @@
                     DataContext="{Binding Source={StaticResource VML}, Path=EmailTypeViewModel}"
                     DisplayMemberPath="EmailTypeDisplayName"
                     ItemsSource="{Binding MijnCollectie}"
-                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.EmailTypeID, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.EmailTypeID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                     SelectedValuePath="EmailTypeID" />
             </Grid>
         </Border>
