--- a/HomeManager/View/Personen/ucNotities.xaml
+++ b/HomeManager/View/Personen/ucNotities.xaml
@@ -68,13 +68,11 @@
                 </Grid.RowDefinitions>
 
                 <TextBlock
-                    x:Name="tbNaam"
                     Grid.Row="0"
                     Grid.Column="1"
                     Text="{Binding MijnSelectedPersoonItem, Mode=OneWay}" />
 
                 <TextBlock
-                    x:Name="tbOnderwerp"
                     Grid.Row="2"
                     Grid.Column="0"
                     Margin="5"
@@ -89,19 +87,11 @@
                     TextWrapping="Wrap" />
 
                 <TextBlock
-                    x:Name="Notitie"
                     Grid.Row="3"
                     Grid.Column="0"
                     Margin="5"
                     Text="Notities"
                     TextAlignment="Right" />
-                <!--<TextBox
-                     x:Name="tbNotities"
-                     Grid.Row="3"
-                     Grid.Column="1"
-                     Height="250"
-                     Margin="5"
-                     Text="{Binding MijnSelectedItem.Notitie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />-->
                 <RichTextBox
                     x:Name="rtbNotities"
                     Grid.Row="3"
@@ -111,10 +101,6 @@
                     helpers:clsRichTextBoxHelper.BindBack="True"
                     helpers:clsRichTextBoxHelper.RtfText="{Binding MijnSelectedItem.Notitie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
 
-
-
-
-
                 <!--  Werkbalk  -->
                 <StackPanel
                     Grid.Row="4"
@@ -122,29 +108,33 @@
                     Margin="5"
                     Orientation="Horizontal">
                     <Button
+                        x:Name="btnBold"
                         Command="{Binding BoldCommand}"
                         CommandParameter="{Binding ElementName=rtbNotities}"
                         Content="B"
                         FontWeight="Bold" />
                     <Button
+                        x:Name="btnItalic"
                         Command="{Binding ItalicCommand}"
                         CommandParameter="{Binding ElementName=rtbNotities}"
                         Content="I"
                         FontStyle="Italic" />
                     <Button
+                        x:Name="btnUnderline"
                         Command="{Binding UnderlineCommand}"
                         CommandParameter="{Binding ElementName=rtbNotities}"
                         Content="U" />
                     <Button
+                        x:Name="btnBullet"
                         Command="{Binding BulletCommand}"
                         CommandParameter="{Binding ElementName=rtbNotities}"
                         Content="•" />
                     <Button
+                        x:Name="btnNumbered"
                         Command="{Binding NumberedCommand}"
                         CommandParameter="{Binding ElementName=rtbNotities}"
                         Content="1." />
                 </StackPanel>
-
             </Grid>
         </Border>
     </Grid>
