--- a/HomeManager/View/Personen/ucTelefoonNummers.xaml
+++ b/HomeManager/View/Personen/ucTelefoonNummers.xaml
@@ -30,24 +30,22 @@
                     <ColumnDefinition Width="auto" />
                 </Grid.ColumnDefinitions>
                 <StackPanel
+                    Grid.Column="0"
                     Margin="10,0,0,0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
-                    Orientation="Horizontal"
-                    Grid.Column="0">
+                    Orientation="Horizontal">
                     <Path
                         Width="20"
                         Height="20"
                         Data="{StaticResource myPathSetting}"
                         Fill="White"
                         Stretch="Fill" />
-                    <TextBlock
-                        Style="{StaticResource TitleBarText}"
-                        Text="Telefoonnummer" />
+                    <TextBlock Style="{StaticResource TitleBarText}" Text="Telefoonnummer" />
                 </StackPanel>
-                <uc:ucWerkBalk 
-                    Grid.Column="1" 
-                    Margin="10,0,10,0" 
+                <uc:ucWerkBalk
+                    Grid.Column="1"
+                    Margin="10,0,10,0"
                     VerticalAlignment="Top" />
             </Grid>
         </Border>
@@ -75,23 +73,12 @@
                     <RowDefinition Height="50" />
                 </Grid.RowDefinitions>
 
-                <!--<ListBox
-                    Name="UserListView"
-                    Grid.Row="2"
-                    Grid.RowSpan="7"
-                    Grid.Column="1"
-                    Width="250"
-                    ItemsSource="{Binding MijnCollectie}"
-                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />-->
-
                 <TextBlock
-                    x:Name="tbNaam"
                     Grid.Row="0"
                     Grid.Column="3"
                     Text="{Binding MijnSelectedPersoonItem, Mode=OneWay}" />
 
                 <TextBlock
-                    x:Name="Telefoonnummer"
                     Grid.Row="2"
                     Grid.Column="2"
                     Margin="5"
@@ -106,7 +93,6 @@
                     TextWrapping="Wrap" />
 
                 <TextBlock
-                    x:Name="TelefoonType"
                     Grid.Row="3"
                     Grid.Column="2"
                     Margin="5"
@@ -120,7 +106,7 @@
                     DataContext="{Binding Source={StaticResource VML}, Path=TelefoonTypeViewModel}"
                     DisplayMemberPath="TelefoonTypeDisplayName"
                     ItemsSource="{Binding MijnCollectie}"
-                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.TelefoonTypeID, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.TelefoonTypeID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                     SelectedValuePath="TelefoonTypeID" />
             </Grid>
         </Border>
