--- a/HomeManager/Resources/StylesDictionary.xaml
+++ b/HomeManager/Resources/StylesDictionary.xaml
@@ -1054,6 +1054,15 @@
         <Setter Property="FontWeight" Value="Bold" />
         <Setter Property="Foreground" Value="DarkBlue" />
     </Style>
+    <Style x:Key="HomePageLabelItem" TargetType="TextBlock">
+        <Setter Property="Margin" Value="3,5,5,0" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="Foreground" Value="White" />
+        <Setter Property="FontFamily" Value="Ariel" />
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="FontWeight" Value="Medium" />
+    </Style>
 
     <Style x:Key="StickyNoteTextBox" TargetType="TextBox">
         <Setter Property="Margin" Value="5" />
@@ -1116,6 +1125,22 @@
                 <Setter Property="Background" Value="#FF007ACC" />
             </Trigger>
         </Style.Triggers>
+    </Style>
+    <Style x:Key="HomePageIconButtonStyle" TargetType="Button">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Padding" Value="5" />
+        <Setter Property="Cursor" Value="Hand" />
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}" CornerRadius="4">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style x:Key="StickyNoteButton" TargetType="Button">
