--- a/HomeManager/View/Homepage/ucFavorieteApplicatie.xaml
+++ b/HomeManager/View/Homepage/ucFavorieteApplicatie.xaml
@@ -75,22 +75,24 @@
             Grid.Row="2"
             Margin="5"
             HorizontalAlignment="Center"
-            Background="{StaticResource myTitleBar}"
+            Background="Transparent"
             Orientation="Horizontal">
 
             <Button
                 Margin="5"
                 Command="{Binding cmdSave}"
                 CommandParameter="{Binding}"
-                Content=".exe"
-                Style="{StaticResource myExpanderDagboek}" />
-
+                Style="{StaticResource HomePageIconButtonStyle}">
+                <Path Data="{StaticResource HomePageItemsAdd}" Fill="{StaticResource myTitleBar}" />
+            </Button>
+            <TextBlock Style="{StaticResource HomePageLabelItem}" Text=".exe" />
 
             <Button
-                Margin="5"
                 Command="{Binding cmdDelete}"
                 CommandParameter="{Binding SelectedApplication}"
-                Style="{StaticResource DeletePersoon}" />
+                Style="{StaticResource HomePageIconButtonStyle}">
+                <Path Data="{StaticResource HomePageItemsDelete}" Fill="{StaticResource myTitleBar}" />
+            </Button>
         </StackPanel>
     </Grid>
 </UserControl>
