--- a/HomeManager/View/Homepage/ucFavorieteVenster.xaml
+++ b/HomeManager/View/Homepage/ucFavorieteVenster.xaml
@@ -31,7 +31,7 @@
             Style="{StaticResource HomepageListView}">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="MouseDoubleClick">
-                    <i:InvokeCommandAction Command="{Binding cmdOpen}" CommandParameter="{Binding SelectedItem, RelativeSource={RelativeSource AncestorType=ListView}}" />
+                    <i:InvokeCommandAction Command="{Binding DataContext.cmdOpen, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" CommandParameter="{Binding SelectedItem, RelativeSource={RelativeSource AncestorType=ListView}}" />
                 </i:EventTrigger>
             </i:Interaction.Triggers>
             <ListView.Resources>
@@ -54,15 +54,18 @@
         <!--  Actieknoppen  -->
         <StackPanel
             Grid.Row="2"
-            Margin="10"
+            Margin="5"
             HorizontalAlignment="Center"
-            Background="{StaticResource myTitleBar}"
+            Background="Transparent"
             Orientation="Horizontal">
             <Button
                 Margin="5"
                 Command="{Binding cmdDelete}"
                 CommandParameter="{Binding SelectedVenster}"
-                Style="{StaticResource DeletePersoon}" />
+                Style="{StaticResource HomePageIconButtonStyle}">
+                <Path Data="{StaticResource HomePageItemsDelete}" Fill="{StaticResource myTitleBar}" />
+
+            </Button>
         </StackPanel>
     </Grid>
 </UserControl>
