--- a/HomeManager/View/Homepage/ucFotoCarousel.xaml
+++ b/HomeManager/View/Homepage/ucFotoCarousel.xaml
@@ -27,7 +27,7 @@
             Grid.Row="2"
             Margin="5"
             HorizontalAlignment="Center"
-            Background="{StaticResource myTitleBar}"
+            Background="Transparent"
             Orientation="Horizontal">
             <Button
                 Width="100"
@@ -35,8 +35,10 @@
                 VerticalAlignment="Center"
                 Command="{Binding cmdSave}"
                 CommandParameter="{Binding}"
-                Content="FotoMap"
-                Style="{StaticResource myExpanderDagboek}" />
+                Style="{StaticResource HomePageIconButtonStyle}">
+                <Path Data="{StaticResource HomePageItemsAdd}" Fill="{StaticResource myTitleBar}" />
+            </Button>
+            <TextBlock Style="{StaticResource HomePageLabelItem}" Text="FotoFolder" />
 
         </StackPanel>
 
