--- a/HomeManager/View/Homepage/ucSnelkoppeling.xaml
+++ b/HomeManager/View/Homepage/ucSnelkoppeling.xaml
@@ -71,26 +71,32 @@
             Grid.Row="2"
             Margin="5"
             HorizontalAlignment="Center"
-            Background="{StaticResource myTitleBar}"
+            Background="Transparent"
             Orientation="Horizontal">
             <Button
                 Margin="5"
                 Command="{Binding cmdSaveMap}"
                 CommandParameter="{Binding}"
-                Content="Map"
-                Style="{StaticResource myExpanderDagboek}" />
+                Style="{StaticResource HomePageIconButtonStyle}">
+                <Path Data="{StaticResource HomePageItemsAdd}" Fill="{StaticResource myTitleBar}" />
+            </Button>
+            <TextBlock Style="{StaticResource HomePageLabelItem}" Text="Folder" />
             <Button
                 Margin="5"
                 Command="{Binding cmdSaveBestand}"
                 CommandParameter="{Binding}"
-                Content="Bestand"
-                Style="{StaticResource myExpanderDagboek}" />
+                Style="{StaticResource HomePageIconButtonStyle}">
+                <Path Data="{StaticResource HomePageItemsAdd}" Fill="{StaticResource myTitleBar}" />
+            </Button>
+            <TextBlock Style="{StaticResource HomePageLabelItem}" Text="Bestand" />
             <Button
                 Margin="5"
                 Command="{Binding cmdDelete}"
                 CommandParameter="{Binding SelectedSnelkoppeling}"
-                IsEnabled="{Binding SelectedSnelkoppeling, Converter={StaticResource VisibilityConvertor}}"
-                Style="{StaticResource DeletePersoon}" />
+                Style="{StaticResource HomePageIconButtonStyle}">
+                <Path Data="{StaticResource HomePageItemsDelete}" Fill="{StaticResource myTitleBar}" />
+
+            </Button>
 
         </StackPanel>
 
