ucEmailVerzenden bijgewerkt zodat je wel ENTER kan doen. ucPersonen aangepast zodat je rechtstreeks op verzenden kunt klikken en hij de persoon meepakt.

--- a/HomeManager/View/Personen/ucEmailVerzenden.xaml
+++ b/HomeManager/View/Personen/ucEmailVerzenden.xaml
@@ -124,8 +124,8 @@
                     Grid.Column="3"
                     Height="250"
                     Margin="5"
+                    AcceptsReturn="True"
                     Text="{Binding Bericht, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-
 
 
                 <Button
