--- a/HomeManager/View/Personen/ucTelefoonType.xaml
+++ b/HomeManager/View/Personen/ucTelefoonType.xaml
@@ -49,9 +49,9 @@
             BorderBrush="Black"
             BorderThickness="1"
             CornerRadius="5">
-            <Grid>
+            <Grid HorizontalAlignment="Center">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="120" />
+                    <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="100" />
