--- a/HomeManager/View/Personen/ucTelefoonNummers.xaml
+++ b/HomeManager/View/Personen/ucTelefoonNummers.xaml
@@ -30,24 +30,22 @@
                     <ColumnDefinition Width="auto" />
                 </Grid.ColumnDefinitions>
                 <StackPanel
+                    Grid.Column="0"
                     Margin="10,0,0,0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
-                    Orientation="Horizontal"
-                    Grid.Column="0">
+                    Orientation="Horizontal">
                     <Path
                         Width="20"
                         Height="20"
                         Data="{StaticResource myPathSetting}"
                         Fill="White"
                         Stretch="Fill" />
-                    <TextBlock
-                        Style="{StaticResource TitleBarText}"
-                        Text="Telefoonnummer" />
+                    <TextBlock Style="{StaticResource TitleBarText}" Text="Telefoonnummer" />
                 </StackPanel>
-                <uc:ucWerkBalk 
-                    Grid.Column="1" 
-                    Margin="10,0,10,0" 
+                <uc:ucWerkBalk
+                    Grid.Column="1"
+                    Margin="10,0,10,0"
                     VerticalAlignment="Top" />
             </Grid>
         </Border>
@@ -111,7 +109,7 @@
                     DataContext="{Binding Source={StaticResource VML}, Path=TelefoonTypeViewModel}"
                     DisplayMemberPath="TelefoonTypeDisplayName"
                     ItemsSource="{Binding MijnCollectie}"
-                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.TelefoonTypeID, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.TelefoonTypeID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                     SelectedValuePath="TelefoonTypeID" />
             </Grid>
         </Border>
