--- a/HomeManager/View/Personen/ucFunctie.xaml
+++ b/HomeManager/View/Personen/ucFunctie.xaml
@@ -34,9 +34,7 @@
                         Data="{StaticResource myPathPeople}"
                         Fill="White"
                         Stretch="Fill" />
-                    <TextBlock
-                        Style="{StaticResource TitleBarText}"
-                        Text="Functie" />
+                    <TextBlock Style="{StaticResource TitleBarText}" Text="Functie" />
 
                 </StackPanel>
                 <uc:ucWerkBalk HorizontalAlignment="Right" VerticalAlignment="Top" />
