--- a/HomeManager/View/Security/ucCredentialManagement.xaml
+++ b/HomeManager/View/Security/ucCredentialManagement.xaml
@@ -55,10 +55,10 @@
             BorderBrush="Black"
             BorderThickness="1"
             CornerRadius="5">
-            <Grid>
+            <Grid ShowGridLines="False">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="250" />
+                    <ColumnDefinition Width="350" />
                     <ColumnDefinition Width="150" />
                     <ColumnDefinition Width="150" />
                     <ColumnDefinition Width="*" />
@@ -72,7 +72,7 @@
                     <RowDefinition Height="25" />
                     <RowDefinition Height="25" />
                     <RowDefinition Height="25" />
-                    <RowDefinition Height="150" />
+                    <RowDefinition Height="4*" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
@@ -87,9 +87,14 @@
                     SelectionUnit="FullRow">
 
                     <DataGrid.Columns>
-
-                        <DataGridTextColumn Binding="{Binding WachtwoordGroepNaam}" Header="First Property" />
-                        <DataGridTextColumn Binding="{Binding WachtwoordNaam}" Header="Second Property" />
+                        <DataGridTextColumn
+                            Width="*"
+                            Binding="{Binding WachtwoordGroepNaam}"
+                            Header="First Property" />
+                        <DataGridTextColumn
+                            Width="*"
+                            Binding="{Binding WachtwoordNaam}"
+                            Header="Second Property" />
                     </DataGrid.Columns>
                 </DataGrid>
                 <StackPanel
@@ -167,6 +172,7 @@
                     Grid.Row="3"
                     Grid.RowSpan="3"
                     Grid.Column="3"
+                    AcceptsReturn="True"
                     Background="White"
                     Text="{Binding MijnSelectedItem.WachtwoordOmschrijving, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
 
