--- a/HomeManager/View/Security/ucCredentialGroup.xaml
+++ b/HomeManager/View/Security/ucCredentialGroup.xaml
@@ -65,7 +65,7 @@
                     <RowDefinition Height="25" />
                     <RowDefinition Height="30" />
                     <RowDefinition Height="30" />
-                    <RowDefinition Height="150" />
+                    <RowDefinition Height="3*" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
