--- a/HomeManager/View/Homepage/ucSnelkoppeling.xaml
+++ b/HomeManager/View/Homepage/ucSnelkoppeling.xaml
@@ -14,7 +14,7 @@
     <Grid DataContext="{Binding Source={StaticResource VML}, Path=SnelkoppelingViewModel}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
-            <RowDefinition Height="250" />
+            <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
         <!--  Titel  -->
