--- a/HomeManager/View/Personen/ucLand.xaml
+++ b/HomeManager/View/Personen/ucLand.xaml
@@ -227,6 +227,7 @@
                     Grid.Column="3"
                     Margin="50,0,0,0"
                     Command="{Binding cmdUploadPicture}"
+                    CommandParameter="{Binding}"
                     Style="{StaticResource UploadVlagButton}" />
             </Grid>
         </Border>
