--- a/HomeManager/View/Personen/ucPersonen.xaml
+++ b/HomeManager/View/Personen/ucPersonen.xaml
@@ -459,6 +459,7 @@
                                 HorizontalAlignment="Right"
                                 VerticalAlignment="Center"
                                 Command="{Binding cmdEditNotities}"
+                                CommandParameter="{Binding}"
                                 Style="{StaticResource AddImage}" />
                         </Grid>
                     </Border>
