Filtering listbox todoPopup ok

--- a/HomeManager/View/ToDo/ucTodoPopup.xaml
+++ b/HomeManager/View/ToDo/ucTodoPopup.xaml
@@ -78,9 +78,10 @@
                     Grid.RowSpan="9"
                     Grid.Column="1"
                     DisplayMemberPath="Onderwerp"
-                    ItemsSource="{Binding MijnCollectie}"
+                    ItemsSource="{Binding FilteredMijnCollectie}"
                     SelectedIndex="{Binding MijnSelectedItem.MijnSelectedIndex, Mode=TwoWay}"
                     SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+
 
 
                 <Label
