--- a/HomeManager/View/Dagboek/ucDagboek.xaml
+++ b/HomeManager/View/Dagboek/ucDagboek.xaml
@@ -216,7 +216,7 @@
                                 <Label
                                     Grid.Row="1"
                                     Padding="1"
-                                    Content="Search Hyperlinks" />
+                                    Content="Find Hyperlinks" />
 
                                 <RibbonButton
                                     Grid.Column="1"
@@ -229,7 +229,7 @@
                                     Grid.Row="1"
                                     Grid.Column="1"
                                     Padding="1"
-                                    Content="Find Email Address" />
+                                    Content="Find Emails" />
 
                             </Grid>
 
