--- a/HomeManager/View/Homepage/ucFotoCarousel.xaml
+++ b/HomeManager/View/Homepage/ucFotoCarousel.xaml
@@ -20,8 +20,16 @@
             Text="Foto Carrousel" />
         <Image
             Grid.Row="1"
+            Cursor="Hand"
             Source="{Binding CurrentPhoto.FolderPath}"
-            Stretch="Uniform" />
+            Stretch="Uniform">
+            <Image.InputBindings>
+                <MouseBinding
+                    Command="{Binding ToonFotoFullScreen}"
+                    CommandParameter="{Binding}"
+                    Gesture="LeftClick" />
+            </Image.InputBindings>
+        </Image>
 
         <StackPanel
             Grid.Row="2"
